Update conference presentation details in index.html

--- a/index.html
+++ b/index.html
@@ -66,13 +66,13 @@
                     <ul>
                       <!-- Edit these items for yourself -->
                       <li style="margin:5px;">
-                        <strong>2025-05</strong> Planning to present my work on tornado like vortices and low rise building loads at the EMI 2025 conference in Anaheim, California.
+                        <strong>2025-05</strong> Planning to present my work on generation of translating tornado-like vortex in a BLWT CFD domain in AMS 2026, Houston conference.
                       </li>
                       <li style="margin:5px;">
-                        <strong>2025-01</strong> Started my research on moving louver vortex generation and LES simulations in OpenFOAM.
+                        <strong>2026-06</strong> Planning to present my work on generation of translating tornado-like vortex in a BLWT CFD domain in 'The 8th International Symposium on Computational Wind Engineering'.
                       </li>
                       <li style="margin:5px;">
-                        <strong>2024-08</strong> Joined the Atmospheric Science program at Texas Tech University.
+                        <strong>2025-01</strong> Joined the Atmospheric Science program at Texas Tech University.
                       </li>
                       <li style="margin:5px;">
                         <strong>Earlier</strong> Completed my Civil Engineering studies and worked on self sensing concrete and infrastructure materials.
