Simplify image display in index.html

--- a/index.html
+++ b/index.html
@@ -94,12 +94,9 @@
                         <tr>
                           <!-- Thumbnail -->
                           <td style="padding:20px;width:25%;vertical-align:middle;">
-                            <div class="one">
-                              <div class="two">
-                                <img src="TLV.png">
-                              </div>
-                            </div>
+                              <img src="TLV.png" style="width:100%; height:auto; display:block;">
                           </td>
+
 
                           <!-- Text -->
                           <td style="padding:20px;width:75%;vertical-align:middle;">
@@ -127,11 +124,7 @@
                         <tr>
                           <!-- Thumbnail -->
                           <td style="padding:20px;width:25%;vertical-align:middle;">
-                            <div class="one">
-                              <div class="two">
-                                <img src="TLV_Building.png">
-                              </div>
-                            </div>
+                              <img src="TLV_Building.png" style="width:100%; height:auto; display:block;">
                           </td>
 
                           <!-- Text -->
