Update teaching section with academic profile details

--- a/index.html
+++ b/index.html
@@ -152,33 +152,47 @@
             </table>
 
             <!-- TEACHING SECTION -->
-            <table style="width:100%;border:0;border-spacing:0;border-collapse:separate;margin:0 auto;">
-              <tbody>
-                <tr>
-                  <td style="padding:20px;width:100%;vertical-align:middle;">
-                    <h2>Teaching</h2>
+            
+<table style="width:100%;border:0;border-spacing:0;border-collapse:separate;margin:0 auto;">
+  <tbody>
+    <tr>
+      <td style="padding:20px;width:100%;vertical-align:middle;">
+        <h2>Teaching</h2>
 
-                    <table style="width:100%;border:0;border-spacing:0;border-collapse:separate;margin:0 auto;">
-                      <tbody>
-                        <tr>
-                          <td style="padding:0;width:25%;vertical-align:middle;">
-                            <!-- Replace this with your university logo if you want -->
-                            <img src="images/media/university_logo.png" width="180" alt="University logo">
-                          </td>
-                          <td style="padding:20px;width:75%;vertical-align:middle;">
-                            <!-- If you have real TA experience, list it here. Otherwise keep it generic or edit later. -->
-                            <p>
-                              Teaching experience to be updated.
-                            </p>
-                          </td>
-                        </tr>
-                      </tbody>
-                    </table>
+        <table style="width:100%;border:0;border-spacing:0;border-collapse:separate;margin:0 auto;">
+          <tbody>
+            <tr>
+              <td style="padding:0;width:25%;vertical-align:middle;">
+                <img
+                  src="images/media/university_logo.png"
+                  width="180"
+                  alt="University logo"
+                >
+              </td>
 
-                  </td>
-                </tr>
-              </tbody>
-            </table>
+              <td style="padding:20px;width:75%;vertical-align:middle;">
+                <p>
+                  I maintain an official academic profile at Daffodil International University that documents my educational background, academic appointments, and teaching related information.
+                </p>
+
+                <p>
+                  <a
+                    href="https://profile.diu.ac/mohammadabidhasan#PersonalInformation"
+                    target="_blank"
+                  >
+                    DIU Academic Profile
+                  </a>
+                </p>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+
+      </td>
+    </tr>
+  </tbody>
+</table>
+
 
           </td>
         </tr>
