--- a/index.html
+++ b/index.html
@@ -163,16 +163,12 @@
           <tbody>
             <tr>
               <td style="padding:0;width:25%;vertical-align:middle;">
-                <img
-                  src="images/media/university_logo.png"
-                  width="180"
-                  alt="University logo"
-                >
+
               </td>
 
               <td style="padding:20px;width:75%;vertical-align:middle;">
                 <p>
-                  I maintain an official academic profile at Daffodil International University that documents my educational background, academic appointments, and teaching related information.
+                  I was working as a lecturer in Civil Engineering at Dhaka International University, Dhaka, Bangladesh.
                 </p>
 
                 <p>
