--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
                   <!-- Right: photo -->
                   <td style="padding:2.5%;width:37%;max-width:37%;">
-                    <img src="1738438374151.jpg">
+                    <img src="Abid_Buet.jpg">
                       
                     </a>
                   </td>
@@ -163,7 +163,7 @@
           <tbody>
             <tr>
               <td style="padding:0;width:25%;vertical-align:middle;">
-
+                <img src="DIU.png" style="width:100%; height:auto; display:block;">
               </td>
 
               <td style="padding:20px;width:75%;vertical-align:middle;">
