Add research presentation details and PDF link
Added details about a research presentation and a link to the poster.

--- a/index.html
+++ b/index.html
@@ -178,12 +178,23 @@
         <strong>Mohammad Abid Hasan</strong>
         <br>
         <em>May 2, 2025</em>
+
         <p>
           On May 2, 2025, our research group presented a poster summarizing the overall research thrust and recent progress in CFD simulations, with a focus on tornado-like vortex generation and wind tunnel inspired numerical modeling.
         </p>
+
         <p>
           <strong>Event:</strong> Celebrating Success and Excellence,
           Department of Geoscience, Texas Tech University.
+        </p>
+
+        <p>
+          <a
+            href="Poster_May_2nd.pdf"
+            target="_blank"
+          >
+            View Poster (PDF)
+          </a>
         </p>
       </td>
 
